--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,28 @@
-numpy
-pandas
-scikit-learn
+certifi==2019.6.16
+chardet==3.0.4
 Click==7.0
+cycler==0.10.0
 Flask==1.1.1
-gunicorn==19.9.0
+Flask-Images==3.0.1
+gunicorn==20.0.4
+idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.10.1
+joblib==0.14.0
+kiwisolver==1.1.0
 MarkupSafe==1.1.1
-Werkzeug==0.15.6
+matplotlib==3.1.1
+numpy==1.17.0
+pandas==0.25.3
+pillowcase==2.0.0
+pyparsing==2.4.2
+python-dateutil==2.8.0
+pytz==2019.2
+requests==2.22.0
+scikit-learn==0.21.3
+scipy==1.3.1
+six==1.12.0
+urllib3==1.25.3
+virtualenv==16.7.2
+virtualenvwrapper-win==1.2.5
+Werkzeug==0.15.5
